--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,10 @@
 
     <div class="col-md-3">
       <div class="list-group" id="list-tab">
-        <a class="list-group-item list-group-item-action list-group-item-dark active" id="linux-list" data-toggle="list" href="#linux">Linux</a>
-        <a class="list-group-item list-group-item-action list-group-item-dark" id="macos-list" data-toggle="list" href="#macos">MacOS</a>
-        <a class="list-group-item list-group-item-action list-group-item-dark" id="windows-list" data-toggle="list" href="#windows">Windows</a>
-        <a class="list-group-item list-group-item-action list-group-item-dark" id="android-list" data-toggle="list" href="#android">Android</a>
+        <a class="list-group-item list-group-item-action list-group-item-dark active" data-toggle="list" href="#linux">Linux</a>
+        <a class="list-group-item list-group-item-action list-group-item-dark" data-toggle="list" href="#macos">MacOS</a>
+        <a class="list-group-item list-group-item-action list-group-item-dark" data-toggle="list" href="#windows">Windows</a>
+        <a class="list-group-item list-group-item-action list-group-item-dark" data-toggle="list" href="#android">Android</a>
       </div>
     </div>
 
