--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -3,33 +3,36 @@
   font-family: "Lato";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/lato-v16-latin-regular.eot"); /* IE9 Compat Modes */
+  src: url("/vpn/static/fonts/lato-v16-latin-regular.eot"); /* IE9 Compat Modes */
   src: local("Lato Regular"), local("Lato-Regular"),
-    url("../fonts/lato-v16-latin-regular.eot?#iefix")
+    url("/vpn/static/fonts/lato-v16-latin-regular.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/lato-v16-latin-regular.woff2") format("woff2"),
-    /* Super Modern Browsers */ url("../fonts/lato-v16-latin-regular.woff")
-      format("woff"),
-    /* Modern Browsers */ url("../fonts/lato-v16-latin-regular.ttf")
+    /* IE6-IE8 */ url("/vpn/static/fonts/lato-v16-latin-regular.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("/vpn/static/fonts/lato-v16-latin-regular.woff") format("woff"),
+    /* Modern Browsers */ url("/vpn/static/fonts/lato-v16-latin-regular.ttf")
       format("truetype"),
-    /* Safari, Android, iOS */ url("../fonts/lato-v16-latin-regular.svg#Lato")
-      format("svg"); /* Legacy iOS */
+    /* Safari, Android, iOS */
+      url("/vpn/static/fonts/lato-v16-latin-regular.svg#Lato") format("svg"); /* Legacy iOS */
 }
 /* lato-900 - latin */
 @font-face {
   font-family: "Lato";
   font-style: normal;
   font-weight: 900;
-  src: url("../fonts/lato-v16-latin-900.eot"); /* IE9 Compat Modes */
+  src: url("/vpn/static/fonts/lato-v16-latin-900.eot"); /* IE9 Compat Modes */
   src: local("Lato Black"), local("Lato-Black"),
-    url("../fonts/lato-v16-latin-900.eot?#iefix") format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/lato-v16-latin-900.woff2") format("woff2"),
-    /* Super Modern Browsers */ url("../fonts/lato-v16-latin-900.woff")
+    url("/vpn/static/fonts/lato-v16-latin-900.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("/vpn/static/fonts/lato-v16-latin-900.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */ url("/vpn/static/fonts/lato-v16-latin-900.woff")
       format("woff"),
-    /* Modern Browsers */ url("../fonts/lato-v16-latin-900.ttf")
+    /* Modern Browsers */ url("/vpn/static/fonts/lato-v16-latin-900.ttf")
       format("truetype"),
-    /* Safari, Android, iOS */ url("../fonts/lato-v16-latin-900.svg#Lato")
-      format("svg"); /* Legacy iOS */
+    /* Safari, Android, iOS */
+      url("/vpn/static/fonts/lato-v16-latin-900.svg#Lato") format("svg"); /* Legacy iOS */
 }
 
 /* roboto-mono-regular - latin */
@@ -37,18 +40,20 @@
   font-family: "Roboto Mono";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/roboto-mono-v7-latin-regular.eot"); /* IE9 Compat Modes */
+  src: url("/vpn/static/fonts/roboto-mono-v7-latin-regular.eot"); /* IE9 Compat Modes */
   src: local("Roboto Mono"), local("RobotoMono-Regular"),
-    url("../fonts/roboto-mono-v7-latin-regular.eot?#iefix")
+    url("/vpn/static/fonts/roboto-mono-v7-latin-regular.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/roboto-mono-v7-latin-regular.woff2")
+    /* IE6-IE8 */ url("/vpn/static/fonts/roboto-mono-v7-latin-regular.woff2")
       format("woff2"),
     /* Super Modern Browsers */
-      url("../fonts/roboto-mono-v7-latin-regular.woff") format("woff"),
-    /* Modern Browsers */ url("../fonts/roboto-mono-v7-latin-regular.ttf")
+      url("/vpn/static/fonts/roboto-mono-v7-latin-regular.woff") format("woff"),
+    /* Modern Browsers */
+      url("/vpn/static/fonts/roboto-mono-v7-latin-regular.ttf")
       format("truetype"),
     /* Safari, Android, iOS */
-      url("../fonts/roboto-mono-v7-latin-regular.svg#RobotoMono") format("svg"); /* Legacy iOS */
+      url("/vpn/static/fonts/roboto-mono-v7-latin-regular.svg#RobotoMono")
+      format("svg"); /* Legacy iOS */
 }
 
 /* roboto-mono-700 - latin */
@@ -56,15 +61,17 @@
   font-family: "Roboto Mono";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/roboto-mono-v7-latin-700.eot"); /* IE9 Compat Modes */
+  src: url("/vpn/static/fonts/roboto-mono-v7-latin-700.eot"); /* IE9 Compat Modes */
   src: local("Roboto Mono Bold"), local("RobotoMono-Bold"),
-    url("../fonts/roboto-mono-v7-latin-700.eot?#iefix")
+    url("/vpn/static/fonts/roboto-mono-v7-latin-700.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/roboto-mono-v7-latin-700.woff2") format("woff2"),
-    /* Super Modern Browsers */ url("../fonts/roboto-mono-v7-latin-700.woff")
-      format("woff"),
-    /* Modern Browsers */ url("../fonts/roboto-mono-v7-latin-700.ttf")
+    /* IE6-IE8 */ url("/vpn/static/fonts/roboto-mono-v7-latin-700.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("/vpn/static/fonts/roboto-mono-v7-latin-700.woff") format("woff"),
+    /* Modern Browsers */ url("/vpn/static/fonts/roboto-mono-v7-latin-700.ttf")
       format("truetype"),
     /* Safari, Android, iOS */
-      url("../fonts/roboto-mono-v7-latin-700.svg#RobotoMono") format("svg"); /* Legacy iOS */
+      url("/vpn/static/fonts/roboto-mono-v7-latin-700.svg#RobotoMono")
+      format("svg"); /* Legacy iOS */
 }
